[package]
name = "sqlite-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.2"
log = { version = "0.4", features = ["std", "serde"] }
anyhow = { version = "1.0", default-features = false }
tempfile = "3.23.0"
tokio = { version = "1.41", features = ["fs", "io-util", "sync", "rt-multi-thread", "macros"] }